--- a/bitcoin-wallet-master/wallet/res/layout/wallet_activity_onepane_vertical.xml
+++ b/bitcoin-wallet-master/wallet/res/layout/wallet_activity_onepane_vertical.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="0px"
         android:layout_weight="1"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -16,13 +16,13 @@
             android:background="@color/bg_panel"
             android:baselineAligned="false"
             android:elevation="3dp"
-            android:orientation="horizontal"
-            android:tag="levitate" >
+            android:orientation="vertical"
+            android:tag="levitate">
 
             <fragment
                 android:id="@+id/wallet_balance_fragment"
                 android:name="de.schildbach.wallet.ui.WalletBalanceFragment"
-                android:layout_width="0px"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
@@ -33,10 +33,11 @@
                 android:name="de.schildbach.wallet.ui.WalletAddressFragment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/list_entry_padding_vertical_lax"
                 android:layout_marginLeft="@dimen/list_entry_padding_horizontal"
-                android:layout_marginRight="@dimen/list_entry_padding_horizontal"
                 android:layout_marginTop="@dimen/list_entry_padding_vertical_lax"
+                android:layout_marginRight="@dimen/list_entry_padding_horizontal"
+                android:layout_marginBottom="@dimen/list_entry_padding_vertical_lax"
+                android:layout_gravity="center"
                 android:tag="slide_in_right" />
         </LinearLayout>
 
