--- a/bitcoin-wallet-master/wallet/res/layout/wallet_transactions_fragment.xml
+++ b/bitcoin-wallet-master/wallet/res/layout/wallet_transactions_fragment.xml
@@ -3,7 +3,7 @@
     android:id="@+id/wallet_transactions_group"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_less_bright">
+    android:background="@color/yiseul_orange2">
 
     <ProgressBar
         android:layout_width="wrap_content"
