--- a/bitcoin-wallet-master/wallet/res/values-v21/styles.xml
+++ b/bitcoin-wallet-master/wallet/res/values-v21/styles.xml
@@ -4,7 +4,8 @@
     <style name="My.Theme" parent="@android:style/Theme.Material.Light.DarkActionBar">
         <item name="android:actionBarStyle">@style/My.Widget.ActionBar</item>
         <item name="android:actionModeStyle">@style/My.Widget.ActionMode</item>
-        <item name="android:actionMenuTextColor">@color/fg_network</item>
+        <item name="android:actionMenuTextColor">@color/colortest_pink</item>
+        <!--<item name="android:actionMenuTextColor">@color/fg_network</item>-->
         <item name="android:actionButtonStyle">@style/My.Widget.ActionButton</item>
         <item name="android:actionOverflowButtonStyle">@style/My.Widget.ActionButton.Overflow</item>
         <item name="android:actionOverflowMenuStyle">@style/My.Widget.PopupMenu.Overflow</item>
@@ -53,14 +54,16 @@
     </style>
 
     <style name="My.TextAppearance.Widget.ActionMode.Title" parent="@android:style/TextAppearance.Material.Widget.ActionMode.Title">
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">@color/colortest_pink</item>
+        <!--<item name="android:textColor">@android:color/white</item>-->
         <item name="android:textStyle">bold</item>
         <item name="android:shadowColor">@android:color/black</item>
         <item name="android:shadowRadius">1</item>
     </style>
 
     <style name="My.TextAppearance.Widget.ActionMode.Subtitle" parent="@android:style/TextAppearance.Material.Widget.ActionMode.Subtitle">
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">@color/colortest_pink</item>
+        <!--<item name="android:textColor">@android:color/white</item>-->
         <item name="android:textStyle">normal</item>
     </style>
 
