--- a/bitcoin-wallet-master/wallet/res/values/colors.xml
+++ b/bitcoin-wallet-master/wallet/res/values/colors.xml
@@ -5,7 +5,8 @@
     <color name="fg_significant">#ff000000</color>
     <color name="fg_less_significant">#ff666666</color>
     <color name="fg_insignificant">#ffbbbbbb</color>
-    <color name="fg_value_positive">#ff008000</color>
+    <color name="fg_value_positive">#f26d5b</color>
+    <!--<color name="fg_value_positive">#ff008000</color>-->
     <color name="fg_value_negative">#ff990000</color>
     <color name="fg_error">#ffff0000</color>
     <color name="fg_network_significant">#ffffffff</color>
@@ -13,10 +14,12 @@
     <color name="fg_shortcut">#ffa0a0a0</color>
 
     <!-- background -->
-    <color name="bg_bright">#ffffffff</color>
+    <color name="bg_bright">#ffffff</color>
+    <!--<color name="bg_bright">#ffffffff</color>트렌젝션 바-->
     <color name="bg_less_bright">#ffe8e8f0</color>
-    <color name="bg_action_bar">#ff222222</color>
-    <color name="bg_panel">#fff2f2f8</color>
+    <color name="bg_action_bar">#fcbe32</color>
+   <!--<color name="bg_action_bar">#ff222222</color> 액션바-->
+    <color name="bg_panel">#ffffff</color>
     <color name="bg_form">@android:color/white</color>
     <color name="bg_list">#40ffffff</color>
     <color name="bg_list_selected">#40808090</color>
@@ -33,6 +36,17 @@
     <color name="scan_laser">#cc0000</color>
     <color name="scan_dot">#ff6600</color>
     <color name="scan_result_view">#b0000000</color>
-    <color name="scan_result_dots">#c099cc00</color>
+    <color name="scan_result_dots">#eb9f9f</color>
+    <!--<color name="scan_result_dots">#c099cc00</color> -->
 
-</resources>
+    <!--yiseul color -->
+    <color name="colortest_pink">#d62a9d</color>
+    <color name="yiseul_ligthpink">#eb9f9f</color>
+    <color name="yiseul_gray1">#5e5e5f</color>
+    <color name="yiseul_white">#ffffff</color>
+    <color name="yiseul_black">#050505</color>
+    <color name="yiseul_orange">#F17F42</color>
+    <color name="yiseul_orange2">#ffa387</color>
+    <color name="yiseul_orange3">#f26d5b</color>
+    <color name="yuseul_lightgray">#F0E5DE</color>
+ </resources>
