--- a/bitcoin-wallet-master/wallet/res/values/dimens.xml
+++ b/bitcoin-wallet-master/wallet/res/values/dimens.xml
@@ -26,5 +26,8 @@
     <dimen name="shortcut_padding">2dp</dimen>
     <dimen name="shortcut_size">48dp</dimen>
     <dimen name="shortcut_icon_size">32dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 
 </resources>
