--- a/bitcoin-wallet-master/wallet/res/values/styles.xml
+++ b/bitcoin-wallet-master/wallet/res/values/styles.xml
@@ -33,7 +33,8 @@
     <style name="My.Widget.ActionBar" parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
         <item name="android:background">@color/bg_action_bar</item>
         <item name="android:titleTextStyle">@style/My.TextAppearance.Widget.ActionBar.Title</item>
-        <item name="android:subtitleTextStyle">@style/My.TextAppearance.Widget.ActionBar.Subtitle</item>
+        <item name="android:subtitleTextStyle">@style/My.TextAppearance.Widget.ActionBar.Subtitle
+        </item>
         <item name="android:displayOptions">showTitle</item>
     </style>
 
@@ -67,7 +68,8 @@
     <style name="My.Widget.ActionMode" parent="@android:style/Widget.Holo.Light.ActionMode.Inverse">
         <item name="android:background">@drawable/action_mode_background</item>
         <item name="android:titleTextStyle">@style/My.TextAppearance.Widget.ActionMode.Title</item>
-        <item name="android:subtitleTextStyle">@style/My.TextAppearance.Widget.ActionMode.Subtitle</item>
+        <item name="android:subtitleTextStyle">@style/My.TextAppearance.Widget.ActionMode.Subtitle
+        </item>
     </style>
 
     <style name="My.TextAppearance.Widget.ActionMode.Title" parent="@android:style/TextAppearance.Holo.Widget.ActionMode.Title">
@@ -124,5 +126,7 @@
     </style>
 
     <style name="My.Widget.PopupMenu" parent="@android:style/Widget.Holo.Light.PopupMenu" />
+
+    <style name="AppTheme" parent="Theme.AppCompat.Light" />
 
 </resources>
