아이콘 변경, delete currency amount in send fragment

--- a/bitcoin-wallet-master/wallet/res/layout/send_coins_fragment.xml
+++ b/bitcoin-wallet-master/wallet/res/layout/send_coins_fragment.xml
@@ -111,7 +111,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:imeOptions="flagNoExtractUi"
-                        android:textSize="@dimen/font_size_large"
+
+                        android:textSize="32dp"
                         tools:ignore="TextFields" />
                 </de.schildbach.wallet.ui.CurrencyAmountView>
 
@@ -127,7 +128,9 @@
                         android:layout_height="wrap_content"
                         android:imeOptions="flagNoExtractUi"
                         android:textSize="@dimen/font_size_large"
-                        tools:ignore="TextFields" />
+                        tools:ignore="TextFields"
+                        android:visibility="invisible"
+                        />
                 </de.schildbach.wallet.ui.CurrencyAmountView>
             </LinearLayout>
         </LinearLayout>
