--- a/bitcoin-wallet-master/wallet/res/layout/request_coins_fragment.xml
+++ b/bitcoin-wallet-master/wallet/res/layout/request_coins_fragment.xml
@@ -33,7 +33,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="0px"
                 android:layout_gravity="top"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+
+                />
         </LinearLayout>
 
         <android.support.v7.widget.CardView
