--- a/bitcoin-wallet-master/wallet/res/menu/exchange_rates_context.xml
+++ b/bitcoin-wallet-master/wallet/res/menu/exchange_rates_context.xml
@@ -3,6 +3,7 @@
 
     <item
         android:id="@+id/exchange_rates_context_set_as_default"
-        android:title="@string/button_set_as_default"/>
+        android:title="@string/button_set_as_default"
+        android:visible="false" />
 
 </menu>
