--- a/bitcoin-wallet-master/wallet/res/layout/address_book_twopanes.xml
+++ b/bitcoin-wallet-master/wallet/res/layout/address_book_twopanes.xml
@@ -20,7 +20,7 @@
             android:layout_marginRight="@dimen/list_entry_padding_horizontal"
             android:layout_marginTop="@dimen/list_entry_padding_vertical"
             android:text="@string/address_book_list_receiving_title"
-            android:textColor="@color/fg_less_significant"
+            android:textColor="@color/yiseul_orange2"
             android:textSize="@dimen/font_size_small"
             android:textStyle="bold" />
 
@@ -47,7 +47,7 @@
             android:layout_marginRight="@dimen/list_entry_padding_horizontal"
             android:layout_marginTop="@dimen/list_entry_padding_vertical"
             android:text="@string/address_book_list_sending_title"
-            android:textColor="@color/fg_less_significant"
+            android:textColor="@color/yiseul_orange2"
             android:textSize="@dimen/font_size_small"
             android:textStyle="bold" />
 
