--- a/bitcoin-wallet-master/wallet/res/layout/dialog_title.xml
+++ b/bitcoin-wallet-master/wallet/res/layout/dialog_title.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--오류 상단바-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/bg_dialog_title"
+    android:background="@color/yiseul_orange"
     android:orientation="horizontal"
     android:paddingBottom="8dp"
     android:paddingLeft="@dimen/list_entry_padding_horizontal_lax"
