--- a/bitcoin-wallet-master/wallet/res/layout/exchange_rates_fragment.xml
+++ b/bitcoin-wallet-master/wallet/res/layout/exchange_rates_fragment.xml
@@ -3,7 +3,8 @@
     android:id="@+id/exchange_rates_list_group"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_bright" >
+    android:background="@color/bg_bright"
+    android:visibility="invisible">
 
     <ProgressBar
         android:layout_width="wrap_content"
