--- a/bitcoin-wallet-master/wallet/res/layout/report_issue_dialog.xml
+++ b/bitcoin-wallet-master/wallet/res/layout/report_issue_dialog.xml
@@ -3,28 +3,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    android:scrollbars="none" >
+    android:scrollbars="none"
+    android:visibility="gone">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/list_entry_padding_horizontal_lax"
         android:layout_marginRight="@dimen/list_entry_padding_horizontal_lax"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/report_issue_dialog_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/list_entry_padding_vertical"
-            android:layout_marginTop="@dimen/list_entry_padding_vertical" />
+            android:layout_marginTop="@dimen/list_entry_padding_vertical"
+            android:layout_marginBottom="@dimen/list_entry_padding_vertical" />
 
         <EditText
             android:id="@+id/report_issue_dialog_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/list_entry_padding_vertical"
             android:layout_marginTop="@dimen/list_entry_padding_vertical"
+            android:layout_marginBottom="@dimen/list_entry_padding_vertical"
             android:hint="@string/report_issue_dialog_description"
             android:inputType="text|textCapSentences|textMultiLine" />
 
@@ -32,8 +33,8 @@
             android:id="@+id/report_issue_dialog_collect_device_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/list_entry_padding_vertical"
             android:layout_marginTop="@dimen/list_entry_padding_vertical"
+            android:layout_marginBottom="@dimen/list_entry_padding_vertical"
             android:checked="true"
             android:text="@string/report_issue_dialog_collect_device_info" />
 
@@ -41,8 +42,8 @@
             android:id="@+id/report_issue_dialog_collect_application_log"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/list_entry_padding_vertical"
             android:layout_marginTop="@dimen/list_entry_padding_vertical"
+            android:layout_marginBottom="@dimen/list_entry_padding_vertical"
             android:checked="true"
             android:text="@string/report_issue_dialog_collect_application_log" />
 
@@ -50,8 +51,8 @@
             android:id="@+id/report_issue_dialog_collect_wallet_dump"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/list_entry_padding_vertical"
             android:layout_marginTop="@dimen/list_entry_padding_vertical"
+            android:layout_marginBottom="@dimen/list_entry_padding_vertical"
             android:checked="true"
             android:text="@string/report_issue_dialog_collect_wallet_dump" />
 
@@ -59,8 +60,8 @@
             android:id="@+id/report_issue_dialog_collect_installed_packages"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/list_entry_padding_vertical"
             android:layout_marginTop="@dimen/list_entry_padding_vertical"
+            android:layout_marginBottom="@dimen/list_entry_padding_vertical"
             android:checked="false"
             android:text="@string/report_issue_dialog_collect_installed_packages" />
     </LinearLayout>
