--- a/bitcoin-wallet-master/wallet/res/layout/request_coins_form_include.xml
+++ b/bitcoin-wallet-master/wallet/res/layout/request_coins_form_include.xml
@@ -19,14 +19,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:divider="@drawable/divider_currency"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:showDividers="middle" >
+        android:showDividers="middle">
 
         <de.schildbach.wallet.ui.CurrencyAmountView
             android:id="@+id/request_coins_amount_btc"
             android:layout_width="0px"
             android:layout_height="wrap_content"
-            android:layout_weight="1" >
+            android:layout_weight="1">
 
             <EditText
                 android:id="@+id/request_coins_amount_btc_edittext"
@@ -41,7 +42,8 @@
             android:id="@+id/request_coins_amount_local"
             android:layout_width="0px"
             android:layout_height="wrap_content"
-            android:layout_weight="1" >
+            android:layout_weight="1"
+            android:visibility="invisible">
 
             <EditText
                 android:id="@+id/request_coins_amount_local_edittext"
