--- a/bitcoin-wallet-master/wallet/res/menu/wallet_transactions_context.xml
+++ b/bitcoin-wallet-master/wallet/res/menu/wallet_transactions_context.xml
@@ -15,11 +15,12 @@
     <item
         android:id="@+id/wallet_transactions_context_raise_fee"
         android:showAsAction="never"
-        android:title="@string/raise_fee_dialog_title"/>
+        android:title="@string/raise_fee_dialog_title" />
     <item
         android:id="@+id/wallet_transactions_context_report_issue"
         android:showAsAction="never"
-        android:title="@string/preferences_report_issue_title"/>
+        android:title="@string/preferences_report_issue_title"
+        android:visible="false" />
     <item
         android:id="@+id/wallet_transactions_context_browse"
         android:showAsAction="never"
