--- a/bitcoin-wallet-master/wallet/res/layout/wallet_activity_onepane_vertical.xml
+++ b/bitcoin-wallet-master/wallet/res/layout/wallet_activity_onepane_vertical.xml
@@ -34,9 +34,9 @@
             <fragment
                 android:id="@+id/wallet_balance_fragment"
                 android:name="de.schildbach.wallet.ui.WalletBalanceFragment"
-                android:layout_width="wrap_content"
+                android:layout_width="295dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_gravity="left"
                 android:layout_weight="1"
                 android:tag="slide_in_left" />
 
