--- a/bitcoin-wallet-master/wallet/res/layout/wallet_balance_fragment.xml
+++ b/bitcoin-wallet-master/wallet/res/layout/wallet_balance_fragment.xml
@@ -10,20 +10,20 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical" >
-
+<!--btc-->
         <de.schildbach.wallet.ui.CurrencyTextView
             android:id="@+id/wallet_balance_btc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/font_size_huge" />
-
+<!--currency-->
         <de.schildbach.wallet.ui.CurrencyTextView
             android:id="@+id/wallet_balance_local"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:paddingRight="8dp"
-            android:textSize="@dimen/font_size_small"
+            android:textSize="0sp"
             android:visibility="invisible" />
 
         <TextView
