--- a/bitcoin-wallet-master/wallet/res/values-v21/styles.xml
+++ b/bitcoin-wallet-master/wallet/res/values-v21/styles.xml
@@ -4,7 +4,7 @@
     <style name="My.Theme" parent="@android:style/Theme.Material.Light.DarkActionBar">
         <item name="android:actionBarStyle">@style/My.Widget.ActionBar</item>
         <item name="android:actionModeStyle">@style/My.Widget.ActionMode</item>
-        <item name="android:actionMenuTextColor">@color/colortest_pink</item>
+        <item name="android:actionMenuTextColor">@color/yiseul_black</item>
         <!--<item name="android:actionMenuTextColor">@color/fg_network</item>-->
         <item name="android:actionButtonStyle">@style/My.Widget.ActionButton</item>
         <item name="android:actionOverflowButtonStyle">@style/My.Widget.ActionButton.Overflow</item>
