--- a/bitcoin-wallet-master/wallet/res/layout/send_coins_fragment.xml
+++ b/bitcoin-wallet-master/wallet/res/layout/send_coins_fragment.xml
@@ -86,12 +86,12 @@
             android:layout_marginTop="8dp"
             android:orientation="vertical" >
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/send_coins_fragment_amount_label"
-                android:textSize="@dimen/font_size_small"
-                android:textStyle="bold" />
+
+
+
+
+
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -198,5 +198,11 @@
     </LinearLayout>
 
     <include layout="@layout/send_coins_buttons_include" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
 
 </LinearLayout>
