--- a/bitcoin-wallet-master/wallet/res/layout/wallet_activity_onepane_vertical.xml
+++ b/bitcoin-wallet-master/wallet/res/layout/wallet_activity_onepane_vertical.xml
@@ -24,7 +24,7 @@
                 android:name="de.schildbach.wallet.ui.WalletBalanceFragment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_gravity="center_horizontal|center"
                 android:layout_weight="1"
                 android:tag="slide_in_left" />
 
