--- a/bitcoin-wallet-master/wallet/res/layout/transaction_row_warning.xml
+++ b/bitcoin-wallet-master/wallet/res/layout/transaction_row_warning.xml
@@ -11,5 +11,5 @@
     android:paddingRight="@dimen/list_entry_padding_horizontal_lax"
     android:paddingBottom="@dimen/list_entry_padding_vertical_lax"
     android:textColor="@color/fg_less_significant"
-    android:textSize="@dimen/font_size_small"
+    android:textSize="0sp"
     android:visibility="invisible" />
