--- a/bitcoin-wallet-master/wallet/res/layout/wallet_activity_onepane_vertical.xml
+++ b/bitcoin-wallet-master/wallet/res/layout/wallet_activity_onepane_vertical.xml
@@ -40,6 +40,15 @@
                 android:layout_weight="1"
                 android:tag="slide_in_left" />
 
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textSize="12sp"
+                android:background="@color/yiseul_orange"
+                android:text=" 거래내역" />
+
         </LinearLayout>
 
         <fragment
