--- a/bitcoin-wallet-master/wallet/res/layout/wallet_balance_fragment.xml
+++ b/bitcoin-wallet-master/wallet/res/layout/wallet_balance_fragment.xml
@@ -11,6 +11,16 @@
         android:gravity="center"
         android:orientation="vertical" >
 <!--btc-->
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="                상품권 잔액"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
         <de.schildbach.wallet.ui.CurrencyTextView
             android:id="@+id/wallet_balance_btc"
             android:layout_width="wrap_content"
@@ -36,6 +46,7 @@
             android:textColor="@color/fg_less_significant"
             android:textSize="@dimen/font_size_tiny"
             android:visibility="gone" />
+
     </LinearLayout>
 
     <TextView
