--- a/bitcoin-wallet-master/wallet/res/values-v21/styles.xml
+++ b/bitcoin-wallet-master/wallet/res/values-v21/styles.xml
@@ -54,16 +54,14 @@
     </style>
 
     <style name="My.TextAppearance.Widget.ActionMode.Title" parent="@android:style/TextAppearance.Material.Widget.ActionMode.Title">
-        <item name="android:textColor">@color/colortest_pink</item>
-        <!--<item name="android:textColor">@android:color/white</item>-->
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:textStyle">bold</item>
         <item name="android:shadowColor">@android:color/black</item>
         <item name="android:shadowRadius">1</item>
     </style>
 
     <style name="My.TextAppearance.Widget.ActionMode.Subtitle" parent="@android:style/TextAppearance.Material.Widget.ActionMode.Subtitle">
-        <item name="android:textColor">@color/colortest_pink</item>
-        <!--<item name="android:textColor">@android:color/white</item>-->
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:textStyle">normal</item>
     </style>
 
