--- a/bitcoin-wallet-master/wallet/res/values/styles.xml
+++ b/bitcoin-wallet-master/wallet/res/values/styles.xml
@@ -81,8 +81,7 @@
     </style>
 
     <style name="My.TextAppearance.Widget.ActionMode.Subtitle" parent="@android:style/TextAppearance.Holo.Widget.ActionMode.Subtitle">
-        <!--<item name="android:textColor">@android:color/white</item>-->
-        <item name="android:textColor">@color/colortest_pink</item>
+        <item name="android:textColor">@android:color/white</item>
 
         <item name="android:textStyle">normal</item>
     </style>
